<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f9f9f9"
        tools:context=".SignUpActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/centerLine2"
            android:layout_centerInParent="true"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_above="@id/centerLine2"
            android:layout_marginBottom="150dp"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_sign_up"
                android:textSize="42sp"
                android:textAlignment="textStart"
                android:textColor="#6bb5ff"
                android:textStyle="bold"
                android:id="@+id/welcomeText"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_to_continue"
                android:textSize="15sp"
                android:textAlignment="textStart"
                android:textColor="#6bb5ff"
                android:textStyle="bold"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/centerLine2"
            android:layout_marginBottom="10dp"
            android:id="@+id/email"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signupemail"
                android:autofillHints="emailAddress"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"/>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/centerLine2"
            android:layout_marginTop="10dp"
            android:id="@+id/password"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/button_background">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signuppassword"
                android:autofillHints="password"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textColor="@color/black"/>


    </com.google.android.material.textfield.TextInputLayout>


    <RelativeLayout
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/password"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_design">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />


    </RelativeLayout>


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/black"
            android:layout_below="@id/signup"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:id="@+id/loginpagenext"/>

</RelativeLayout>