<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f9f9f9"
        tools:context=".ForgotPasswordActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/centerLine3"
            android:layout_centerInParent="true"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_above="@id/centerLine3"
            android:layout_marginBottom="120dp"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_page_title"
                android:textSize="37sp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:id="@+id/welcomeText"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_registered_email_id"
                android:textSize="15sp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textStyle="bold"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/centerLine3"
            android:layout_marginBottom="10dp"
            android:id="@+id/email"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/forgotpasswordemail"
                android:autofillHints="emailAddress"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"/>


    </com.google.android.material.textfield.TextInputLayout>


    <RelativeLayout
            android:id="@+id/forgotpasswordbutton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/email"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_design">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:text="@string/send_login_link"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />


    </RelativeLayout>


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/black"
            android:layout_below="@id/forgotpasswordbutton"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:id="@+id/forgotpagenext"/>

</RelativeLayout>